# cardano-utxo-csmt

./: .gitignore  404.html  CHANGELOG.md  README.md  cabal.project  cardano-utxo-csmt.cabal  flake.nix  hie.yaml  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: CI.yaml  e2e-preview.yaml
.llm/: PR-40-chain-sync-progress-logging-investigation.md  issue-34-stream-utxo-import.md  issue-41-validate-node-before-mithril.md  issue-42-mithril-stm-validation.md  issue-48-mithril-verify-investigation.md  issue-51-bootstrap-progress-metrics.md  issue-52-ed25519-ancillary-verification.md  issue-55-rename-and-cleanup-executables.md  issue-61-bump-haskell-csmt.md  issue-69-bootstrap-in-progress-marker.md  issue-70-config-file-support.md  issue-72-remove-partial-history.md
CI/: release.sh
app/chainsync/: in-memory.hs  main.hs
app/cli/: main.hs
application/Cardano/UTxOCSMT/Application/: Metrics.hs  SampleList.hs
application/Cardano/UTxOCSMT/Application/Database/: Properties.hs
application/Cardano/UTxOCSMT/Application/Database/Implementation/: RollbackPoint.hs  Transaction.hs
application/Cardano/UTxOCSMT/Application/Run/: Application.hs  Base16.hs  Config.hs  GenesisData.hs  Main.hs  Query.hs  RenderMetrics.hs  Setup.hs  Traces.hs
application/Cardano/UTxOCSMT/Ouroboros/: Types.hs
application/Data/List/: SampleFibonacci.hs
architecture/: index.html
assets/: ingestion.cast  mithril-bootstrap.cast  mithril-demo.sh  record-demo.sh  swagger.json
bench/: main.hs
bench/Bench/: CSMT.hs
config/: mainnet.yaml  preprod.yaml  preview.yaml
config/Cardano/UTxOCSMT/: Config.hs
docs/: architecture.md  getting-started.md  index.md  mithril-bootstrap.md  swagger-api.md  swagger-ui.md  swagger.md
docs/assets/: ingestion.cast  mithril-bootstrap.cast  mithril-demo.sh  record-demo.sh  swagger.json
docs/presentation/: README.md  light-clients.md  slides.md
docs/presentation/diagrams/: architecture.mmd  publishers.mmd
e2e/: docker-compose.n2n.yml  docker-compose.yml  node.properties
e2e-test/: main.hs
e2e-test/Cardano/UTxOCSMT/E2E/: Devnet.hs  GenesisChainSyncSpec.hs
executables/chainsync/: main.hs
executables/db-query/: main.hs
executables/extract-utxos/: main.hs
executables/memory-test/: Main.hs
executables/swagger/: main.hs
getting-started/: index.html
http/Cardano/UTxOCSMT/HTTP/: API.hs  Base16.hs  Server.hs  Swagger.hs
integration-test/Cardano/Node/Client/E2E/: Devnet.hs  ProviderSpec.hs  Setup.hs  SubmitterSpec.hs  UTxOStateSpec.hs
lib/Cardano/UTxOCSMT/Application/: BlockFetch.hs  ChainSync.hs  ChainSyncN2C.hs  Metrics.hs  Options.hs  UTxOs.hs
lib/Cardano/UTxOCSMT/Application/Database/: Interface.hs  Properties.hs  RocksDB.hs
lib/Cardano/UTxOCSMT/Application/Database/Implementation/: AppConfig.hs  Armageddon.hs  Columns.hs  Query.hs  Transaction.hs  Update.hs
lib/Cardano/UTxOCSMT/Application/Database/Properties/: Expected.hs
lib/Cardano/UTxOCSMT/Application/Metrics/: Types.hs
lib/Cardano/UTxOCSMT/Bootstrap/: App.hs  Genesis.hs
lib/Cardano/UTxOCSMT/Mithril/: AncillaryVerifier.hs  Client.hs  Extraction.hs  Import.hs  Options.hs  Streaming.hs
lib/Cardano/UTxOCSMT/Ouroboros/: Application.hs  Codecs.hs  Connection.hs  ConnectionN2C.hs  Types.hs
lib/Control/Foldl/: Extra.hs
lib/Data/List/: SampleFibonacci.hs
lib/Data/Tracer/: LogFile.hs  ThreadSafe.hs  Throttle.hs  Throttling.hs  Timestamp.hs  TraceWith.hs
mithril-bootstrap/: index.html
mithril-stm-test/: Main.hs
mithril-stm-test/Mithril/STM/: IntegrationSpec.hs  LotterySpec.hs  MerkleSpec.hs  SerializationSpec.hs  VerifySpec.hs
mithril-stm/Mithril/: STM.hs
mithril-stm/Mithril/STM/: Crypto.hs  Lottery.hs  Merkle.hs  Parameters.hs  Serialization.hs  Types.hs  Verify.hs
mithril-stm/Mithril/STM/Crypto/: Crypton.hs  Hsblst.hs
nix/: docker-image.nix  linux-artifacts.nix  macos-artifacts.nix  project.nix
presentation/: index.html
presentation/light-clients/: index.html
presentation/slides/: index.html
run/: README.md  cardano-utxo.sh  mainnet.sh  preprod.sh  preview.sh
search/: search_index.json
src/Cardano/N2N/Client/Application/: BlockFetch.hs  ChainSync.hs  KeepAlive.hs  Metrics.hs  Options.hs  Run.hs  SampleList.hs  UTxOs.hs
src/Cardano/N2N/Client/Application/Database/: Implementation.hs  InMemory.hs  Interface.hs  Properties.hs  RocksDB.hs
src/Cardano/N2N/Client/Application/Database/Implementation/: Armageddon.hs  Columns.hs  Point.hs  Query.hs  RollbackPoint.hs  RunTransaction.hs  Transaction.hs  Update.hs
src/Cardano/N2N/Client/Application/Database/Properties/: Expected.hs
src/Cardano/N2N/Client/Application/Database/RocksDB/: Structure.hs
src/Cardano/N2N/Client/Application/Run/: Application.hs  GenesisData.hs  InMemory.hs  Main.hs  RenderMetrics.hs  RocksDB.hs
src/Cardano/N2N/Client/Ouroboros/: Application.hs  Codecs.hs  Connection.hs  Types.hs
src/Cardano/UTxO/CSMT/: App.hs
src/Cardano/UTxOCSMT/Application/: KeepAlive.hs  Metrics.hs
src/Cardano/UTxOCSMT/Application/Database/Properties/: Expected.hs
src/Cardano/UTxOCSMT/Application/Run/: Application.hs
src/Cardano/UTxOCSMT/Ouroboros/: Application.hs  Codecs.hs  Connection.hs
src/Data/List/: SampleFibonacci.hs
src/Data/Tracer/: Intercept.hs  LogFile.hs  Timestamps.hs  TraceWith.hs
swagger/: index.html
swagger-ui/: index.html  swagger-ede0d425.html
test/Cardano/N2N/Client/Application/Database/: InMemorySpec.hs  RocksDBSpec.hs
test/Cardano/UTxOCSMT/Application/: OptionsSpec.hs
test/Cardano/UTxOCSMT/Application/Database/: E2ESpec.hs  RocksDBSpec.hs
test/Cardano/UTxOCSMT/HTTP/: ServerSpec.hs
test/Cardano/UTxOCSMT/Mithril/: AncillaryVerifierSpec.hs  ClientSpec.hs  ImportSpec.hs
test/Data/List/: SampleFibonacciSpec.hs
test/Data/Tracer/: ThrottleSpec.hs
test/assets/db/: 000010.sst  000011.sst  IDENTITY  LOG  LOG.old.1765311425119784  LOG.old.1765311488436887  MANIFEST-000017  OPTIONS-000019
test/fixtures/: golden-utxos.cbor
