cabal-version:   3.4
name:            cardano-utxo-csmt
version:         0.1.0.0
synopsis:
  An http service that exposes a Compact Sparse Merkle Tree (CSMT) data structure
  over the current UTxO set of the Cardano blockchain.

description:
  This library provides an implementation of a Compact Sparse Merkle Tree (CSMT)
  data structure to efficiently represent and verify the UTxO set of the Cardano
  blockchain. It includes functionalities for constructing, updating, and querying
  the CSMT, as well as generating and verifying Merkle proofs for UTxO entries.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library http
  import:           warnings
  hs-source-dirs:   http
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , cardano-utxo-csmt:library
    , csmt
    , lens
    , memory
    , network
    , ouroboros-network-api
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , wai
    , wai-cors
    , warp

  exposed-modules:
    Cardano.UTxOCSMT.HTTP.API
    Cardano.UTxOCSMT.HTTP.Base16
    Cardano.UTxOCSMT.HTTP.Server
    Cardano.UTxOCSMT.HTTP.Swagger

library application
  import:           warnings
  other-modules:    Paths_cardano_utxo_csmt
  exposed-modules:
    Cardano.UTxOCSMT.Application.Run.Application
    Cardano.UTxOCSMT.Application.Run.GenesisData
    Cardano.UTxOCSMT.Application.Run.Main
    Cardano.UTxOCSMT.Application.Run.RenderMetrics

  build-depends:
    , ansi-terminal
    , async
    , base
    , bytestring
    , cardano-ledger-byron
    , cardano-utxo-csmt:http
    , cardano-utxo-csmt:library
    , cereal
    , containers
    , contra-tracer
    , csmt
    , http-client
    , http-client-tls
    , lens
    , memory
    , mtl
    , opt-env-conf
    , ouroboros-consensus
    , ouroboros-network-api
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions:kv-transactions
    , strict-stm
    , temporary
    , text
    , with-utf8

  hs-source-dirs:   application
  default-language: Haskell2010
  other-modules:    Paths_cardano_utxo_csmt

library library
  import:           warnings
  other-modules:    Paths_cardano_utxo_csmt
  exposed-modules:
    Cardano.UTxOCSMT.Application.BlockFetch
    Cardano.UTxOCSMT.Application.ChainSync
    Cardano.UTxOCSMT.Application.Database.Implementation.Armageddon
    Cardano.UTxOCSMT.Application.Database.Implementation.Columns
    Cardano.UTxOCSMT.Application.Database.Implementation.Query
    Cardano.UTxOCSMT.Application.Database.Implementation.RollbackPoint
    Cardano.UTxOCSMT.Application.Database.Implementation.Transaction
    Cardano.UTxOCSMT.Application.Database.Implementation.Update
    Cardano.UTxOCSMT.Application.Database.Interface
    Cardano.UTxOCSMT.Application.Database.Properties
    Cardano.UTxOCSMT.Application.Database.Properties.Expected
    Cardano.UTxOCSMT.Application.Database.RocksDB
    Cardano.UTxOCSMT.Application.KeepAlive
    Cardano.UTxOCSMT.Application.Metrics
    Cardano.UTxOCSMT.Application.Options
    Cardano.UTxOCSMT.Application.SampleList
    Cardano.UTxOCSMT.Application.UTxOs
    Cardano.UTxOCSMT.Bootstrap.App
    Cardano.UTxOCSMT.Mithril.AncillaryVerifier
    Cardano.UTxOCSMT.Mithril.Client
    Cardano.UTxOCSMT.Mithril.Extraction
    Cardano.UTxOCSMT.Mithril.Import
    Cardano.UTxOCSMT.Mithril.Options
    Cardano.UTxOCSMT.Mithril.Streaming
    Cardano.UTxOCSMT.Ouroboros.Application
    Cardano.UTxOCSMT.Ouroboros.Codecs
    Cardano.UTxOCSMT.Ouroboros.Connection
    Cardano.UTxOCSMT.Ouroboros.Types
    Data.List.SampleFibonacci
    Data.Tracer.Intercept
    Data.Tracer.LogFile
    Data.Tracer.ThreadSafe
    Data.Tracer.Timestamps
    Data.Tracer.TraceWith

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , containers
    , crypton
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-read-ledger
    , cborg
    , cereal
    , comonad
    , contra-tracer
    , csmt
    , directory
    , exceptions
    , filepath
    , foldl
    , http-client
    , http-types
    , lens
    , memory
    , mempack
    , mtl
    , network
    , network-mux
    , opt-env-conf
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , profunctors
    , QuickCheck
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , serialise
    , streaming
    , streaming-bytestring
    , strict-sop-core
    , strict-stm
    , swagger2
    , text
    , time
    , typed-process
    , typed-protocols

  hs-source-dirs:   lib
  default-language: Haskell2010
  other-modules:    Paths_cardano_utxo_csmt

executable cardano-utxo-csmt-swagger
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/swagger/main.hs
  build-depends:
    , base
    , bytestring
    , cardano-utxo-csmt:http

  default-language: Haskell2010

executable cardano-utxo-csmt
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/cli/main.hs
  build-depends:
    , base
    , cardano-utxo-csmt:library

  default-language: Haskell2010

executable cardano-utxo-chainsync
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/chainsync/main.hs
  build-depends:
    , base
    , cardano-utxo-csmt:application

  default-language: Haskell2010

executable extract-utxos
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/extract-utxos/main.hs
  other-modules:    Paths_cardano_utxo_csmt
  build-depends:
    , base
    , bytestring
    , cardano-utxo-csmt:library
    , contra-tracer
    , http-client
    , http-client-tls
    , opt-env-conf
    , serialise
    , streaming
    , temporary

  default-language: Haskell2010

executable memory-test
  import:           warnings
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -s" -O2
  main-is:          executables/memory-test/Main.hs
  other-modules:    Paths_cardano_utxo_csmt
  build-depends:
    , base
    , cardano-utxo-csmt:library
    , contra-tracer
    , http-client
    , http-client-tls
    , opt-env-conf
    , streaming
    , time

  default-language: Haskell2010

library test-lib
  import:           warnings
  visibility:       public
  build-depends:
  hs-source-dirs:   test-lib
  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-ledger-babbage
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-slotting
    , cardano-utxo-csmt:http
    , cardano-utxo-csmt:library
    , cereal
    , containers
    , contra-tracer
    , csmt
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , lens
    , memory
    , mempack
    , ouroboros-network-api
    , QuickCheck
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions:kv-transactions
    , serialise
    , streaming
    , temporary
    , text
    , transformers
    , wai
    , wai-extra

  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    Cardano.UTxOCSMT.Application.Database.RocksDBSpec
    Cardano.UTxOCSMT.HTTP.ServerSpec
    Cardano.UTxOCSMT.Mithril.AncillaryVerifierSpec
    Cardano.UTxOCSMT.Mithril.ClientSpec
    Cardano.UTxOCSMT.Mithril.ImportSpec
    Data.List.SampleFibonacciSpec

benchmark bench
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          main.hs
  other-modules:    Bench.CSMT
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
    , base
    , bytestring
    , cardano-utxo-csmt:library
    , contra-tracer
    , criterion
    , csmt
    , lens
    , rocksdb-haskell-jprupp
    , serialise
    , temporary
