cabal-version:   3.4
name:            cardano-utxo-csmt
version:         0.1.0.0
synopsis:
  An http service that exposes a Compact Sparse Merkle Tree (CSMT) data structure
  over the current UTxO set of the Cardano blockchain.

description:
  This library provides an implementation of a Compact Sparse Merkle Tree (CSMT)
  data structure to efficiently represent and verify the UTxO set of the Cardano
  blockchain. It includes functionalities for constructing, updating, and querying
  the CSMT, as well as generating and verifying Merkle proofs for UTxO entries.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  -- Thin main library required for haskell.nix compatibility.
  -- haskell.nix's redirect.nix expects a main library component;
  -- without it, packages with only named sub-libraries cause
  -- a TargetNotLocal evaluation error.
  import:           warnings
  default-language: Haskell2010
  build-depends:
    , base
    , cardano-utxo-csmt:library

library http
  import:           warnings
  visibility:       public
  hs-source-dirs:   http
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , cardano-utxo-csmt:library
    , csmt
    , lens
    , memory
    , network
    , ouroboros-network-api
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , text
    , wai
    , wai-cors
    , warp

  exposed-modules:
    Cardano.UTxOCSMT.HTTP.API
    Cardano.UTxOCSMT.HTTP.Base16
    Cardano.UTxOCSMT.HTTP.Server
    Cardano.UTxOCSMT.HTTP.Swagger

library application
  import:           warnings
  visibility:       public

  -- Work around GHC false positive: rocksdb-kv-transactions is used by Setup.hs
  -- but GHC reports it as unused when compiling earlier modules
  ghc-options:      -Wno-unused-packages
  other-modules:    Paths_cardano_utxo_csmt
  exposed-modules:
    Cardano.UTxOCSMT.Application.Run.Application
    Cardano.UTxOCSMT.Application.Run.Config
    Cardano.UTxOCSMT.Application.Run.GenesisData
    Cardano.UTxOCSMT.Application.Run.Main
    Cardano.UTxOCSMT.Application.Run.Query
    Cardano.UTxOCSMT.Application.Run.RenderMetrics
    Cardano.UTxOCSMT.Application.Run.Setup
    Cardano.UTxOCSMT.Application.Run.Traces

  build-depends:
    , ansi-terminal
    , async
    , base
    , bytestring
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-utxo-csmt:http
    , cardano-utxo-csmt:library
    , cereal
    , containers
    , contra-tracer
    , contra-tracer-contrib
    , csmt
    , http-client
    , http-client-tls
    , lens
    , memory
    , mtl
    , network
    , opt-env-conf
    , ouroboros-consensus
    , ouroboros-network-api
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions:kv-transactions
    , strict-stm
    , temporary
    , text
    , time
    , with-utf8

  hs-source-dirs:   application
  default-language: Haskell2010
  other-modules:    Paths_cardano_utxo_csmt

library library
  import:           warnings
  visibility:       public
  other-modules:    Paths_cardano_utxo_csmt
  exposed-modules:
    Cardano.UTxOCSMT.Application.BlockFetch
    Cardano.UTxOCSMT.Application.ChainSync
    Cardano.UTxOCSMT.Application.ChainSyncN2C
    Cardano.UTxOCSMT.Application.Database.Implementation.AppConfig
    Cardano.UTxOCSMT.Application.Database.Implementation.Armageddon
    Cardano.UTxOCSMT.Application.Database.Implementation.Columns
    Cardano.UTxOCSMT.Application.Database.Implementation.Query
    Cardano.UTxOCSMT.Application.Database.Implementation.RollbackPoint
    Cardano.UTxOCSMT.Application.Database.Implementation.Transaction
    Cardano.UTxOCSMT.Application.Database.Implementation.Update
    Cardano.UTxOCSMT.Application.Database.Interface
    Cardano.UTxOCSMT.Application.Database.Properties
    Cardano.UTxOCSMT.Application.Database.Properties.Expected
    Cardano.UTxOCSMT.Application.Database.RocksDB
    Cardano.UTxOCSMT.Application.KeepAlive
    Cardano.UTxOCSMT.Application.Metrics
    Cardano.UTxOCSMT.Application.Metrics.Types
    Cardano.UTxOCSMT.Application.Options
    Cardano.UTxOCSMT.Application.SampleList
    Cardano.UTxOCSMT.Application.UTxOs
    Cardano.UTxOCSMT.Mithril.AncillaryVerifier
    Cardano.UTxOCSMT.Mithril.Client
    Cardano.UTxOCSMT.Mithril.Extraction
    Cardano.UTxOCSMT.Mithril.Import
    Cardano.UTxOCSMT.Mithril.Options
    Cardano.UTxOCSMT.Mithril.Streaming
    Cardano.UTxOCSMT.Ouroboros.Application
    Cardano.UTxOCSMT.Ouroboros.Codecs
    Cardano.UTxOCSMT.Ouroboros.Connection
    Cardano.UTxOCSMT.Ouroboros.ConnectionN2C
    Cardano.UTxOCSMT.Ouroboros.Types
    Control.Foldl.Extra
    Data.List.SampleFibonacci

  build-depends:
    , aeson
    , async
    , autodocodec
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-read-ledger
    , cborg
    , cereal
    , comonad
    , containers
    , contra-tracer
    , contra-tracer-contrib
    , crypton
    , csmt
    , directory
    , exceptions
    , filepath
    , foldl
    , http-client
    , http-types
    , lens
    , memory
    , mempack
    , mtl
    , network
    , network-mux
    , opt-env-conf
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , path
    , profunctors
    , QuickCheck
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , serialise
    , streaming
    , streaming-bytestring
    , strict-sop-core
    , strict-stm
    , swagger2
    , text
    , time
    , typed-process
    , typed-protocols
    , unliftio

  hs-source-dirs:   lib
  default-language: Haskell2010
  other-modules:    Paths_cardano_utxo_csmt

executable cardano-utxo-swagger
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/swagger/main.hs
  build-depends:
    , base
    , bytestring
    , cardano-utxo-csmt:http

  default-language: Haskell2010

executable cardano-utxo
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/chainsync/main.hs
  build-depends:
    , base
    , cardano-utxo-csmt:application

  default-language: Haskell2010

executable extract-utxos
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          executables/extract-utxos/main.hs
  other-modules:    Paths_cardano_utxo_csmt
  build-depends:
    , base
    , bytestring
    , cardano-utxo-csmt:library
    , contra-tracer
    , http-client
    , http-client-tls
    , opt-env-conf
    , serialise
    , streaming
    , temporary

  default-language: Haskell2010

executable memory-test
  import:           warnings
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -s" -O2
  main-is:          executables/memory-test/Main.hs
  other-modules:    Paths_cardano_utxo_csmt
  build-depends:
    , base
    , cardano-utxo-csmt:library
    , contra-tracer
    , http-client
    , http-client-tls
    , opt-env-conf
    , streaming
    , time

  default-language: Haskell2010

test-suite unit-tests
  import:             warnings

  -- Work around GHC false positive for unused packages
  -- Test-only TipOf instances (TipOf Int, TipOf SlotNo) are necessarily orphans
  ghc-options:        -Wno-unused-packages -Wno-orphans
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-ledger-babbage
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-slotting
    , cardano-utxo-csmt:http
    , cardano-utxo-csmt:library
    , cereal
    , containers
    , contra-tracer
    , contra-tracer-contrib
    , csmt
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , lens
    , memory
    , mempack
    , opt-env-conf
    , ouroboros-network-api
    , path
    , QuickCheck
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions:kv-transactions
    , serialise
    , streaming
    , temporary
    , text
    , time
    , transformers
    , wai
    , wai-extra
    , yaml

  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    Cardano.UTxOCSMT.Application.Database.E2ESpec
    Cardano.UTxOCSMT.Application.Database.RocksDBSpec
    Cardano.UTxOCSMT.Application.OptionsSpec
    Cardano.UTxOCSMT.HTTP.ServerSpec
    Cardano.UTxOCSMT.Mithril.AncillaryVerifierSpec
    Cardano.UTxOCSMT.Mithril.ClientSpec
    Cardano.UTxOCSMT.Mithril.ImportSpec
    Data.List.SampleFibonacciSpec
    Data.Tracer.ThrottleSpec

test-suite cardano-utxo-csmt-integration-test
  import:             warnings
  ghc-options:        -Wno-unused-packages
  default-language:   GHC2021
  hs-source-dirs:     integration-test
  build-depends:
    , async
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-strict-containers
    , containers
    , directory
    , filepath
    , hspec
    , microlens
    , ouroboros-network-api
    , process
    , time
    , unix

  build-tool-depends: hspec-discover:hspec-discover
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    Cardano.Node.Client.E2E.Devnet
    Cardano.Node.Client.E2E.ProviderSpec
    Cardano.Node.Client.E2E.Setup
    Cardano.Node.Client.E2E.SubmitterSpec
    Cardano.Node.Client.E2E.UTxOStateSpec

benchmark bench
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          main.hs
  other-modules:    Bench.CSMT
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
    , base
    , bytestring
    , cardano-utxo-csmt:library
    , contra-tracer
    , criterion
    , csmt
    , lens
    , rocksdb-haskell-jprupp
    , serialise
    , temporary
